<resources>
    <string name="app_name">Color quiz</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="all_colors">Colors</string>
    <string name="all_colors_description">Colors to include in the quiz</string>
    <string name="guess_color">Guess the color</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_mode_message">You must select one mode. Set the child mode as the default mode.</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="color_description">Picture of the current color in the quiz</string>
    <string name="default_mode">Children\'s</string>
    <string name="title_activity_settings">Settings</string>
</resources>
